--- a/assets/css/github-styles.css
+++ b/assets/css/github-styles.css
@@ -1,11 +1,9 @@
-@import url('http://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 br {
   display: block;
   line-height: 1.6em;
 }
-
-
 
 ol,
 ul {
